# ad-delcont

./: Changelog.md  LICENSE  README.md  ad-delcont.cabal  stack.yaml
src/Numeric/AD/: DelCont.hs
src/Numeric/AD/DelCont/: Internal.hs
test/Numeric/AD/: DelContSpec.hs
