name:                ad-delcont
version:             0.1.0.0
synopsis:            AD with delimited continuations
-- description:
homepage:            https://github.com/ocramz/ad-delcont
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           (c) 2021 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.AD.DelCont
                       Numeric.AD.DelCont.Internal
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.5

executable ad-delcont
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ad-delcont

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ad-delcont
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/ad-delcont
